<resources>
    <string name="app_name">InventoryApp</string>
    <string name="title_activity_product_edit">ProductEditActivity</string>
    <string name="edit_name">Name:</string>
    <string name="name">Name</string>
    <string name="edit_price">Price:</string>
    <string name="price">Price</string>
    <string name="edit_inventory">Inventory:</string>
    <string name="inventory">Inventory</string>
    <string name="edit_sales">Sales:</string>
    <string name="sales">Sales</string>
    <string name="supplier_telephone">Supplier Telephone</string>
    <string name="edit_supplier_tel">Supplier Tel:</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="edit_supplier_email">Supplier Email:</string>
    <string name="edit_product_picture">Product Picture:</string>
    <string name="new_inventory">New Inventory</string>
    <string name="saled">Saled:</string>
    <string name="sale">sale</string>
    <string name="product_sales">Product sales sucessfull!</string>
    <string name="inventoryset">InventorySet</string>
    <string name="modify_step">Modify_Step</string>
    <string name="set_modify_number_title">Set the Add/Delete number</string>
    <string name="confirm">Confirm</string>
    <string name="title_book_selection">Book Selection</string>
    <string name="no_tel">There have no Tel!</string>
    <string name="no_email">There have no Email!</string>
    <string name="subject_email">这是邮件的主题部分</string>
    <string name="text_email">这是邮件的正文部分</string>
    <string name="email_app">请选择邮件类应用</string>
    <string name="cancel">Cancel</string>
    <string name="title_set_inventory">Set the Inventory</string>
    <string name="name_cannot_null">The Name is can not null!</string>
    <string name="inventory_not_small">The inventory is can not be small than 0!</string>
    <string name="update_sucess">Updata product Sucessfull</string>
    <string name="error_with_insert">Error with insert product</string>
    <string name="save_with_id">Product saved with id</string>
    <string name="delete_product">Delete current Product?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="discard_changes">Discard your changes and quit editor?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="add_product">Add a product</string>
    <string name="edit_product">Editor the product</string>
</resources>
